banner button fix on mobile

--- a/wp-content/themes/liteSource/assets/style/blocks/_hero-header.scss
+++ b/wp-content/themes/liteSource/assets/style/blocks/_hero-header.scss
@@ -27,6 +27,13 @@
         }
         .button-group{
             margin-top:25px;
+            @include media("<=sm") {
+                flex-direction: column;
+                .btn{
+                    margin-bottom:10px;
+                }
+            }
+            
         }
     }
     .slider-background-container{
